--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 98vh;
+    height: 97vh;
     width: 70vh;
     background-color: transparent;
 }
@@ -105,4 +105,8 @@ input[type="checkbox"] {
 
 input[type="checkbox"] {
     margin-right: 5px; 
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
