--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ label {
 }
 
 input[type="text"], select {
-    width: 100%; /* Full width for input fields */
+    width: 100%; 
     padding: 10px;
     height: 40px;
     border: 1px solid var(--french-gray);
@@ -67,7 +67,7 @@ input[type="text"], select {
 }
 
 button {
-    width: 100%; /* Full width for the button */
+    width: 100%; 
     padding: 10px;
     background-color: var(--lapis-lazuli);
     border: none;
